--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="Styles/style.css" />
     <title>Netflix Clone</title>
   </head>
   <body>
@@ -19,6 +19,23 @@
         </nav>
       </div>
     </header>
+
+    <main>
+      <div class="filme-principal">
+        <div class="container">
+          <h3 class="titulo">The Walking Dead</h3>
+          <p class="descricao">
+            The Walking Dead. A história acompanha a vida na Terra após um
+            apocalipse zumbi e um grupo de sobreviventes liderados pelo
+            ex-policial, Rick Grimes, viajam em busca de um lar seguro.
+          </p>
+          <div class="botao">
+            <button>ASSISTIR AGORA</button>
+            <button>MAIS INFORMAÇÕES</button>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <script></script>
   </body>
