--- a/Index.html
+++ b/Index.html
@@ -29,14 +29,14 @@
             apocalipse zumbi e um grupo de sobreviventes liderados pelo
             ex-policial, Rick Grimes, viajam em busca de um lar seguro.
           </p>
-          <div class="botao">
-            <button>ASSISTIR AGORA</button>
-            <button>MAIS INFORMAÇÕES</button>
+          <div class="botoes">
+            <button role="button" class="botao"><i class="fa-solid fa-play"></i>ASSISTIR AGORA</button>
+            <button role="button" class="botao"><i class="fa-solid fa-circle-info"></i>MAIS INFORMAÇÕES</button>
           </div>
         </div>
       </div>
     </main>
 
-    <script></script>
+    <script src="https://kit.fontawesome.com/402488700c.js" crossorigin="anonymous"></script>  
   </body>
 </html>
