--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Styles/style.css" />
+
+    <link rel="stylesheet" href="Styles/owl/owl.carousel.min.css" />
+    <link rel="stylesheet" href="Styles/owl/owl.theme.default.min.css" />
+
     <title>Netflix Clone</title>
   </head>
   <body>
@@ -37,6 +41,44 @@
       </div>
     </main>
 
-    <script src="https://kit.fontawesome.com/402488700c.js" crossorigin="anonymous"></script>  
+    <div class="carrosel-filmes">
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <img class="box" src="/IMG/min.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box" src="/IMG/min1.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box" src="/IMG/min2.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box" src="/IMG/min3.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box" src="/IMG/min4.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box" src="/IMG/min5.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box" src="/IMG/min8.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box" src="/IMG/min7.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box" src="/IMG/min9.jpg" alt="">
+        </div>
+      </div>
+
+    </div>
+
+    <script src="https://kit.fontawesome.com/402488700c.js" crossorigin="anonymous"></script>
+    <script src="/JS/owl/jquery.min.js"></script>
+    <script src="/JS/owl/owl.carousel.min.js"></script>
+    <script src="/JS/owl/setup.js"></script>  
+
+
   </body>
 </html>
