--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Styles/style.css" />
 
+    <link rel="stylesheet" href="Styles//responsivo.css" />
+
     <link rel="stylesheet" href="Styles/owl/owl.carousel.min.css" />
     <link rel="stylesheet" href="Styles/owl/owl.theme.default.min.css" />
 
@@ -77,8 +79,7 @@
     <script src="https://kit.fontawesome.com/402488700c.js" crossorigin="anonymous"></script>
     <script src="/JS/owl/jquery.min.js"></script>
     <script src="/JS/owl/owl.carousel.min.js"></script>
-    <script src="/JS/owl/setup.js"></script>  
-
-
+    <script src="/JS/owl/setup.js"></script> 
+ 
   </body>
 </html>
